# archiver-mcp-server

./: .env.example  .gitignore  README.md  STRUCTURE  pyproject.toml
src/: payload.proto
src/archiver_mcp_server/: archiver_client.py  protobuf_parser.py  server.py
src/archiver_mcp_server.egg-info/: SOURCES.txt  requires.txt  top_level.txt
